2005-09-06  Sam Steingold  <sds@gnu.org>

	* iofkts.tst: check that WRITE-TO-STRING binds variables for
	supplied keyword arguments
	remove global definitions at the end of file

2005-08-15  Sam Steingold  <sds@gnu.org>

	* path.tst: more feedback on failure

2005-08-15  Sam Steingold  <sds@gnu.org>

	* streams.tst: test (DESCRIBE NIL)

2005-08-10  Sam Steingold  <sds@gnu.org>

	* strings.tst: test EXT:STRING-INVERTCASE

2005-08-05  Sam Steingold  <sds@gnu.org>

	* macro8.tst: test EXT:COMPILED-FILE-P

2005-08-03  Sam Steingold  <sds@gnu.org>

	* time.tst: check docstring preservation under compilation; add cleanup

2005-08-02  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests): run "time"
	* time.tst: new file

2005-08-02  Sam Steingold  <sds@gnu.org>

	* restarts.tst: test CHECK-FUNCTION-NAME in DOCUMENTATION
	* setf.tst, alltest.tst: DOCUMENTATION is now in SYMBOL-PLIST

2005-08-02  Sam Steingold  <sds@gnu.org>

	* mop.tst: unlock "CLOS" when defining a
	CLOS:FINALIZE-INHERITANCE method

2005-08-02  Sam Steingold  <sds@gnu.org>

	* tests.lisp (show): moved here from the individual test files

2005-07-25  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests): disable bind-eval because of amd64 issues

2005-07-22  Sam Steingold  <sds@gnu.org>

	* path.tst: when "foo" is a file, (directory "foo/") must return NIL

2005-07-21  Sam Steingold  <sds@gnu.org>

	* encoding.tst: test SYS::GET-CHARSET-RANGE (was in src/subtypep.lisp)

2005-07-07  Sam Steingold  <sds@gnu.org>

	* setf.tst: check that GET-SETF-EXPANSION accepts NIL environment arg

2005-07-06  Sam Steingold  <sds@gnu.org>

	* bind.tst: use -X- and -F- instead of *X* and *F* to avoid
	conflict with globally special variables defined elsewhere

2005-06-28  Sam Steingold  <sds@gnu.org>

	* macro8.tst: test circular lists in code

2005-06-26  Sam Steingold  <sds@gnu.org>

	* macros8.tst: test (cond (t)) compilation

2005-06-22  Sam Steingold  <sds@gnu.org>
